hphp/hack/test/typecheck/constraints/bad_contra_constraint.php.exp
File "bad_contra_constraint.php", line 22, characters 21-25:
Invalid argument (Typing[4110])
File "bad_contra_constraint.php", line 13, characters 17-23:
Expected nothing from this `is` expression test
File "bad_contra_constraint.php", line 9, characters 67-68:
But got Td
File "bad_contra_constraint.php", line 9, characters 67-68:
Considering that this type argument is invariant with respect to Derived
